--- a/quiz/home/templates/home/quiz.html
+++ b/quiz/home/templates/home/quiz.html
@@ -21,13 +21,11 @@
 
             <p>[[question.question]]</p>
             <div class="form-check" v-for="answer in question.answers">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+              <input @change="checkAnswer($event, question.id_u)" :value="answer.answer" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
               <label class="form-check-label" for="flexRadioDefault1">
                 [[answer.answer]]
               </label>
             </div>
-
-            <hr>
 
           </div>
         </div>
@@ -58,6 +56,25 @@
               console.log(result)
               _this.questions = result.data
             })
+          },
+          checkAnswer(event, id_u){
+
+            this.questions.map(question =>{
+              answers = question.answers
+              for(var i=0; i < answers.length; i++){
+                if(answers[i].answer == event.target.value){
+                  if(answers[i].answer.is_correct){
+                    console.log('Правильный ответ')
+                    alert('Правильный ответ')
+                  }else{
+                    console.log('Вы ответели не правильно')
+                    alert('Вы ответели не правильно')
+                  }
+                }
+              }
+            })
+
+            console.log(event.target.value, id_u)
           }
         },
         created(){
